Fixed overflowing input box on mobile

--- a/sass/_mailchimp.sass
+++ b/sass/_mailchimp.sass
@@ -12,12 +12,13 @@
     display: block
     padding: 1rem
     margin: 4.5% auto 0 auto
-    width: 96.25%
+    width: 100%
     text-align: center
     background: $lightAccent
     transition: border-color 0.5s ease
     border: .5rem solid $lightAccent
     font: normal 800 3rem / 3.5rem $fontHeader
+    box-sizing:border-box
     &:focus
       outline: none
       border-color: $darkAccent
